# OpenMP

./: CMakeLists.txt  main.cpp  parallel_mp.cpp  parallel_mpi.cpp  sequential.cpp
